--- a/ProductOrg/ProductOrg/Views/PomodoroPage.xaml
+++ b/ProductOrg/ProductOrg/Views/PomodoroPage.xaml
@@ -5,6 +5,11 @@
              xmlns:control="clr-namespace:ProgressRingControl.Forms.Plugin;assembly=ProgressRing.Forms.Plugin">
     <ContentPage.Content>
         <StackLayout>
+            <Button Text="Configuration"
+                    HorizontalOptions="Center"
+                    VerticalOptions="CenterAndExpand" 
+                    Command="{Binding pomodoroConfigCmd}"/>
+
             <Label Text="Welcome to Pomodoro"
                    VerticalOptions="CenterAndExpand" 
                    HorizontalOptions="CenterAndExpand" />
@@ -47,7 +52,7 @@
                 <Label Text="{Binding Pomodoros}" />
             </StackLayout>
 
-            <Button Text="Iniciar / Pausar"
+            <Button Text="Start / Pause"
                     HorizontalOptions="Center"
                     VerticalOptions="CenterAndExpand" 
                     TextColor="White"
